finally fixed the spacing of the sidebar for good, worked on adding both an image grid and a codeblock to the post template. Codeblock done with highlightjs nord themed for coherence. tweaked the mark class to match theme colors. unified the grid background class that was using index image grid nomenclature to a page/section agnostic one

--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ body {
 .wrkd_on_txt.card {
 	background-color: var(--db100);
 }
-
+.card_txt_background.card {
+    background-color: var(--db100);
+}
 #footer {
 	background-color: var(--db100);
 }
@@ -77,7 +79,10 @@ body {
 p {
 	color: var(--db20);
 }
-
+mark {
+    color: var(--db40);
+    background-color: var(--py);
+}
 /* removing defalt link appearance */
 a {
 	color: var(--db20);
@@ -172,6 +177,12 @@ a {
     margin: 0rem !important;
     padding: 0rem !important;
 }
+.card_txt_template {
+    margin-top: 0.25rem;
+    margin-bottom: 0rem;
+    font-size: 0.8rem;
+    color: var(--db20);
+}
 .h4_wrkd_on {
 	margin-top: 0.5rem;
     margin-bottom: 0rem;
@@ -205,6 +216,7 @@ a {
 /* BLOG */
 /* sidebar color */
 .sidebar {
+    min-width: 40px;
     border-style: dotted;
     border-width: 0.2rem;
     border-color: var(--db60);
@@ -227,7 +239,7 @@ a {
     border-bottom-width: 0.2rem !important;
     border-color: var(--db60);
 }
-.bug_icon {  
+.bug_icon {
 	filter: invert(52%) sepia(5%) saturate(1217%) hue-rotate(173deg) brightness(93%) contrast(86%) !important;
 }
 #sidebar_icons:hover {
@@ -235,18 +247,11 @@ a {
 }
 .post_title {
 	margin-bottom: 0rem;
-	font-size: 2rem;
+	font-size: 2.25rem;
 	color: var(--db20);
 }
 .tags {
 	margin-top: 0rem;
 	font-size: 1rem;
 	color: var(--db60);
-}
-/* codeblock */
-pre code {
-	background-color: var(--db60);
-	border: 1px solid var(--db80);
-	display: block;
-	padding: 20px;
 }
